# GideonRavenor1_infra

./: .gitignore  README.md  cloud-bastion.ovpn  deploy.sh  pyproject.toml  startup.yaml
.github/: auto_assign.yml
ansible/: ansible.cfg  inventory  inventory.yml
config-scripts/: startup.yaml
packer/: app.json  db.json  otus_key.json  ubuntu16.json  variables.json.example
packer/scripts/: install_mongodb.sh  install_ruby.sh
play-travis/: test.py
terraform/: main.tf  storage-bucket.tf  terraform.tfvars.example  variables.tf
terraform/files/: deploy.sh
terraform/modules/app/: main.tf  outputs.tf  variables.tf
terraform/modules/db/: main.tf  outputs.tf  variables.tf
terraform/prod/: main.tf  terraform.tfvars.example  variables.tf
terraform/stage/: main.tf  otus_key.json  outputs.tf
